@@ -27,8 +27,8 @@ lib_LTLIBRARIES = libgw-guile-gnome-gobject.la \
 
 # libgw-guile-gnome-gobject (g-wrap support)
 
-libgw_guile_gnome_gobject_la_SOURCES = guile-gnome-gw-gobject.c
-libgw_guile_gnome_gobject_la_CFLAGS = -I$(srcdir)/../gobject \
+nodist_libgw_guile_gnome_gobject_la_SOURCES = guile-gnome-gw-gobject.c
+libgw_guile_gnome_gobject_la_CFLAGS = -I$(srcdir)/../gobject -I../gobject \
         $(AM_CFLAGS) $(GOBJECT_CFLAGS) $(GUILE_CFLAGS) $(G_WRAP_CFLAGS)
 libgw_guile_gnome_gobject_la_LIBADD = $(G_WRAP_LIBS) $(GOBJECT_LIBS) \
 	$(GUILE_LIBS) \
@@ -39,7 +39,8 @@ libgw_guile_gnome_gobject_la_LDFLAGS = -module
 
 noinst_HEADERS = glib-support.h
 
-libgw_guile_gnome_glib_la_SOURCES = guile-gnome-gw-glib.c glib-support.c
+nodist_libgw_guile_gnome_glib_la_SOURCES = guile-gnome-gw-glib.c
+libgw_guile_gnome_glib_la_SOURCES = glib-support.c
 libgw_guile_gnome_glib_la_CFLAGS = \
 	$(AM_CFLAGS) $(GLIB_CFLAGS) $(GUILE_CFLAGS) $(G_WRAP_CFLAGS)
 libgw_guile_gnome_glib_la_LIBADD = $(GLIB_LIBS) $(GUILE_LIBS) \
